<resources>
    <string name="app_name">ZedboardTestApp</string>
    <string name="upload_activity">UploadActivity</string>
    <string name="download_activity">DownloadActivity</string>
    <string name="download_selection_activity">Select a file from the bucket</string>
    <string name="download">Download</string>
    <string name="manage_download">Manage downloads</string>
    <string name="upload">Upload</string>
    <string name="capture_2d">2D Capture</string>
    <string name="capture_3d">3D Capture</string>
    <string name="manage_upload">Manage uploads</string>
    <string name="upload_file">Upload a file</string>
    <string name="upload_image">Upload an image</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete All</string>
    <string name="pause_all">Pause all</string>
    <string name="cancel_all">Cancel all</string>
    <string name="refreshing">Refreshing</string>
    <string name="please_wait">Please wait</string>

    <string name="wifi_status">WiFi Status</string>
    <string name="enable_wifi">Enable WiFi</string>
    <string name="wifi_setting">WiFi Setting</string>

    <string name="connect_wifi">Connect WiFi</string>
    <string name="get_ntp_time">Get NTP Time</string>
    <string name="update_app">Update App</string>
    <string name="preference">Preference</string>

    <string name="SSID">SSID</string>
    <string name="Password">Password</string>
    <string name="battery_capacity">Battery Capacity:</string>
    <string name="current_time">Current Time:</string>

    <string name="aws_account">AWS Account ID</string>
    <string name="user_pool_id">User Pool ID</string>
    <string name="pool_region">Pool Region</string>
    <string name="unauth_role_arn">Unauth Role ARN</string>
    <string name="auth_role_arn">Auth Role ARN</string>
    <string name="bucket_name">Bucket Name</string>
    <string name="bucket_region">Bucket Region</string>

    <string name="save">Save</string>
    <string name="restore">Restore</string>

    <string name="register">Register(hex)</string>
    <string name="read_register">Read</string>

    <string name="register_value">Value(hex)</string>
    <string name="write_register">Write</string>

    <string name="touch_x">X:</string>
    <string name="touch_y">Y:</string>

</resources>
