<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2DCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/capture_2d" />

        <Button
            android:id="@+id/button3DCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/capture_3d" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upload" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonWiFiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wifi_status" />

        <Button
            android:id="@+id/buttonEnableWiFi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enable_wifi" />

        <Button
            android:id="@+id/buttonWiFiSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wifi_setting" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSSID"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/SSID"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="textPassword" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonConnectWiFi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_wifi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewBatteryCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/battery_capacity"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonGetNTPTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ntp_time" />

        <TextView
            android:id="@+id/textViewNTPTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_time" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_app" />

        <Button
            android:id="@+id/buttonPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preference" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRegisterAddress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <EditText
            android:id="@+id/editTextRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="textPersonName"
            android:maxLength="8"
            android:text="70e00000" />

        <Button
            android:id="@+id/buttonReadRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_register" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRegisterValue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/register_value" />

        <EditText
            android:id="@+id/editTextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="textPersonName"
            android:maxLength="8"
            android:text="deadbeef" />

        <Button
            android:id="@+id/buttonWriteRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_register" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTouchX"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/touch_x"
            tools:text="X:" />

        <TextView
            android:id="@+id/textViewTouchY"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/touch_y" />

    </LinearLayout>

</LinearLayout>